--- a/k8s/plain/statefulset-db.yaml
+++ b/k8s/plain/statefulset-db.yaml
@@ -21,7 +21,7 @@ spec:
         command: ["sh", "-c", "if [ -d /vol/lost+found ]; then rmdir /vol/lost+found; fi"]
       containers:
       - name: postgres
-        image: postgres:alpine
+        image: postgres:16-alpine
         env:
         - name: POSTGRES_HOST_AUTH_METHOD
           value: trust
